kubernetes/infra/status/manifests/gatus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: status
  template:
    metadata:
      labels:
        app.kubernetes.io/name: status
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: gatus
          image: ghcr.io/twin/gatus:v5.36.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /config/config.yaml
              subPath: config.yaml
            - name: data
              mountPath: /data
      volumes:
        - name: config
          configMap:
            name: gatus-config
        - name: data
          emptyDir: {}
