kubernetes/infra/status/manifests/kromgo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kromgo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kromgo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kromgo
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: kromgo
          image: ghcr.io/kashalls/kromgo:v0.10.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /kromgo/config.yaml
              subPath: config.yaml
      volumes:
        - name: config
          configMap:
            name: kromgo-config
