kubernetes/infra/status/manifests/gatus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status
spec:
  selector:
    app.kubernetes.io/name: status
  ports:
    - name: http
      port: 80
      targetPort: http
