kubernetes/infra/status/manifests/kromgo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kromgo
spec:
  selector:
    app.kubernetes.io/name: kromgo
  ports:
    - name: http
      port: 80
      targetPort: http
