kubernetes/infra/status/manifests/gatus-backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: status
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: status
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 120
            unit: Minute
