kubernetes/infra/status/manifests/gatus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: status
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - status.homelab
    - status.erasmus.works
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/v1/endpoints/internal_grafana/health/badge.shields
          method: GET
        - path:
            type: Exact
            value: /api/v1/endpoints/internal_grafana/health/badge.shields
          method: HEAD
        - path:
            type: Exact
            value: /api/v1/endpoints/internal_prometheus/health/badge.shields
          method: GET
        - path:
            type: Exact
            value: /api/v1/endpoints/internal_prometheus/health/badge.shields
          method: HEAD
        - path:
            type: Exact
            value: /api/v1/endpoints/internal_alertmanager/health/badge.shields
          method: GET
        - path:
            type: Exact
            value: /api/v1/endpoints/internal_alertmanager/health/badge.shields
          method: HEAD
      backendRefs:
        - name: status
          group: ""
          kind: Service
          port: 80
          weight: 1
