kubernetes/infra/status/manifests/kromgo-backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: kromgo
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kromgo
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 120
            unit: Minute
