kubernetes/infra/status/manifests/kromgo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kromgo
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - kromgo.homelab
    - kromgo.erasmus.works
  rules:
    - matches:
        - path:
            type: Exact
            value: /talos_version
          method: GET
        - path:
            type: Exact
            value: /talos_version
          method: HEAD
        - path:
            type: Exact
            value: /kubernetes_version
          method: GET
        - path:
            type: Exact
            value: /kubernetes_version
          method: HEAD
        - path:
            type: Exact
            value: /cluster_age_days
          method: GET
        - path:
            type: Exact
            value: /cluster_age_days
          method: HEAD
        - path:
            type: Exact
            value: /cluster_uptime_days
          method: GET
        - path:
            type: Exact
            value: /cluster_uptime_days
          method: HEAD
        - path:
            type: Exact
            value: /cluster_node_count
          method: GET
        - path:
            type: Exact
            value: /cluster_node_count
          method: HEAD
        - path:
            type: Exact
            value: /cluster_pod_count
          method: GET
        - path:
            type: Exact
            value: /cluster_pod_count
          method: HEAD
        - path:
            type: Exact
            value: /cluster_cpu_usage
          method: GET
        - path:
            type: Exact
            value: /cluster_cpu_usage
          method: HEAD
        - path:
            type: Exact
            value: /cluster_memory_usage
          method: GET
        - path:
            type: Exact
            value: /cluster_memory_usage
          method: HEAD
        - path:
            type: Exact
            value: /cluster_alert_count
          method: GET
        - path:
            type: Exact
            value: /cluster_alert_count
          method: HEAD
      backendRefs:
        - name: kromgo
          group: ""
          kind: Service
          port: 80
          weight: 1
